--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-database'
 
     implementation 'com.github.delight-im:Android-SimpleLocation:v1.1.0'
-
+    implementation 'com.github.TutorialsAndroid:KAlertDialog:v4.0.19'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
