--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,12 +34,12 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
 
-    implementation platform('com.google.firebase:firebase-bom:26.1.1')
+    implementation platform('com.google.firebase:firebase-bom:26.3.0')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.firebaseui:firebase-ui-database:7.1.1'
 
-    implementation 'com.github.delight-im:Android-SimpleLocation:v1.1.0'
+    implementation 'com.yayandroid:LocationManager:2.4.1'
     implementation 'com.github.TutorialsAndroid:KAlertDialog:v4.0.19'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
